--- a/forum/index.html
+++ b/forum/index.html
@@ -4,6 +4,7 @@
 <title>Forum | CTE, Tezpur</title>
 <script type="text/javascript" src="https://latest.cactus.chat/cactus.js"></script>
 <link rel="stylesheet" href="https://latest.cactus.chat/style.css" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style>
 div.hm {
